mongo already working

--- a/config/app.toml
+++ b/config/app.toml
@@ -3,5 +3,9 @@ dbhost = "localhost"
 dbname = "signpost"  
 
 [production]
+dbhost = "localhost-prod"  
+dbname = "signpost-prod"
+
+[testing]
 dbhost = "localhost"  
-dbname = "signpost"  
+dbname = "test"  
